# mmore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  push-to-registry.yml  sphinx-docs.yml  tests.yml
docker/arch/: Dockerfile  README.md
docker/leap/: Dockerfile  README.md
docker/ubuntu/: Dockerfile  README.md
docs/: Makefile  distributed_processing.md  process.md  rcp_and_production.md  retriever_api_specs.yaml
docs/source/: conf.py  dashboard.md  distributed_processing.md  for_devs.md  index.md  indexing.md  profiler.md  rcp_and_production.md  uv.md  websearch.md
docs/source/_static/: custom.css
docs/source/advanced_usage/: distributed_processing.md  profiler.md  rcp_and_production.md  uv.md
docs/source/core_features/: colpali.md  dashboard.md  evaluation.md  websearch.md
docs/source/developer_documentation/: for_devs.md  index_api.md  retriever_api_specs.yaml
docs/source/getting_started/: architecture.md  indexing.md  installation.md  process.md  quickstart.md  rag.md
examples/postprocessor/: config.yaml
examples/process/: config.yaml
examples/rag/swissai/: rag_swissai.yaml
examples/websearchRAG/: config.yaml  config_api.yaml  enhanced_results_trial.json
examples/who/pp/: chunk_semantic.yaml  chunk_sentence.yaml
production-config/process/: config.yaml
src/mmore/: cli.py  profiler.py  run_index_api.py  run_process.py  run_retriever.py  run_websearch.py  type.py
src/mmore/index/: indexer.py
src/mmore/process/: crawler.py  dispatcher.py  incremental.py  utils.py
src/mmore/process/post_processor/: pipeline.py
src/mmore/process/post_processor/chunker/: multimodal.py  utils.py
src/mmore/process/post_processor/filter/: datatrove_wrapper.py
src/mmore/process/post_processor/metafuse/: base.py
src/mmore/process/post_processor/ner/: ner.py
src/mmore/process/post_processor/tagger/: base.py  file_namer.py
src/mmore/process/post_processor/translator/: base.py
src/mmore/process/processors/: base.py  docx_processor.py  eml_processor.py  html_processor.py  md_processor.py  media_processor.py  pdf_processor.py  pptx_processor.py  spreadsheet_processor.py  txt_processor.py  url_processor.py
src/mmore/rag/: llm.py  retriever.py
src/mmore/websearchRAG/: config.py  pipeline.py  websearch.py
tests/: conftest.py  test_change_detection_postprocess.py  test_change_detection_process.py  test_paragraph_extraction.py  test_postprocessors.py  test_previous_results.py  test_rag.py  test_retriever_api.py  test_websearch_pipeline.py
