[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmore"
version = "1.2.2"
description = "mmore: Scalable multimodal document extraction pipeline for custom RAG integration."
readme = "README.md"
authors = [
    { name = "Alexandre Sallinen", email = "alexandre.sallinen@epfl.ch" },
    { name = "Paul Teiletche", email = "paul.teiletche@epfl.ch" },
    { name = "Marc-Antoine Allard", email = "marc-antoine.allard@epfl.ch" },
    { name = "Stefan Krsteski", email = "stefan.krsteski@epfl.ch" },
    { name = "David Kalajdzic", email = "david.kalajdzic@epfl.ch" },
    { name = "Michael Zhang", email = "michael.zhang@epfl.ch" },
    { name = "Matthias Meyer", email = "matthias.meyer@sdsc.ethz.ch" },
    { name = "Fabrice Nemo", email = "fabrice.nemo@epfl.ch" },
    { name = "Charlotte Meyer", email = "charlotte.meyer@epfl.ch" },
    { name = "Grieder Lea", email = "lea.grieder@epfl.ch" },
    { name = "Matthew Meyer", email = "matthew.meyer@epfl.ch" },
    { name = "Laetitia Wilhelm", email = "laetitia.wilhelm@epfl.ch" },
    { name = "Achille Triomphe", email = "achille.triomphe@epfl.ch" },
    { name = "Victor Zablocki", email = "victor.zablocki@epfl.ch" },
    { name = "Adam Chahed Ouazzani", email = "adam.chahedouazzani@epfl.ch" },
    { name = "Omar Ziyad Azgaoui", email = "omar.azgaoui@epfl.ch"}
]
requires-python = ">=3.10"
dependencies = [
    # Core - shared utilities across all pipeline stages
    "numpy>=1.26,<2; python_version < '3.12'",
    "numpy>=2.0; python_version >= '3.12'",
    "pandas>=2.1",
    "Pillow",
    "pydantic>=2.6",
    "click>=8.1.7",
    "dacite>=1.8",
    "validators>=0.28",
    "python-dotenv>=1.0",
    "typing_extensions>=4.15.0,<5.0",
    "PyYAML>=6.0",
    "setuptools<81"
]

[project.optional-dependencies]

# --- Pipeline stages ---

process = [
    # Document processing + post-processing
    "transformers>=4.44",
    "PyMuPDF",
    "marker-pdf>=1.6",
    "surya-ocr>=0.8.3",
    "moviepy>=2.0",
    "mammoth>=1.8",
    "markdownify>=0.12",
    "markdown>=3.5",
    "python-docx",
    "python-pptx",
    "openpyxl>=3.1",
    "requests>=2.31",
    "trafilatura>=1.12",
    "clean-text",
    "Unidecode",
    "chonkie>=0.2.1,<1",
    "langdetect>=1.0.9",
    "argostranslate",
    "langid",
    "dask[distributed]>=2025.2.0",
    "docx2pdf",
    "lxml_html_clean",
    "beautifulsoup4>=4.12",
    "xlrd>=2.0.1",
    "py7zr>=0.22",
    "rarfile>=4.1",
    "fasteners>=0.19",
    "google-auth>=2.28",
    "google-api-python-client>=2.120",
    "datatrove>=0.3; python_version < '3.12'",
    "datatrove>=0.7; python_version >= '3.12'",
    "colpali-engine>=0.3",
    "bokeh",
]

index = [
    # Indexing + Retrieval (vector DB, embeddings)
    "pymilvus[milvus-lite]==2.6.6",
    "pymilvus-model>=0.3.2",
    "milvus-model>=0.2.12",
    "langchain-milvus>=0.1.8",
    "sentence-transformers",
    "transformers>=4.44",
    "scipy>=1.8",
]

rag = [
    # RAG with LangChain (LLM calls, evaluation)
    "mmore[index]",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-aws>=0.2",
    "langchain-cohere>=0.3",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.1",
    "langchain-mistralai>=0.2",
    "langchain-openai>=0.3",
    "cohere>=5.0",
    "ragas>=0.2",
    "datasets>=4.0",
    "accelerate>=0.30",
    "nltk>=3.9",
]

api = [
    # API servers
    "fastapi[standard]>=0.110",
    "uvicorn>=0.29",
    "starlette>=0.36",
    "httpx>=0.27",
    "requests>=2.31",
    "pymongo>=4.6",
    "motor>=3.5",
]

# --- Composite + variant extras ---

all = [
    "mmore[process,rag,api,websearch]",
]

cpu = [
    "torch>=2.7.0",
    "torchvision",
]
cu126 = [
    "torch>=2.7.0",
    "torchvision",
]

websearch = [
    "tavily-python>=0.3.0",
    "ddgs>=6.0",
]

dev = ["pytest>=8.3.4", "pytest-timeout>=2.3.1", "ruff>=0.4.0", "pyright"]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu126" },
  ],
]

override-dependencies = ["anthropic==0.73.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu126", extra="cu126", marker = "platform_machine != 'aarch64'"},
  # { url = "https://download.pytorch.org/whl/cu126/torch-2.5.1-cp311-cp311-linux_aarch64.whl", extra="cu126",  marker = "platform_machine == 'aarch64'" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "platform_system != 'Darwin'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "platform_machine != 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
mmore = "mmore.cli:main"

[tool.setuptools]
packages = ["mmore"]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
filterwarnings = ["ignore::Warning"]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/mmore/run_retriever.py"]    # TODO: add back when GH CI bug is fixed

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
fixable = ["ALL"]
ignore = ["E501", "E402"]   # Avoid enforcing line-length violations (`E501`) and Module level import not at top of file (`E402`)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"run_index_api.py" = ["N803", "N806"]
